--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="con">
                 <h2>Contact Via Whatsapp</h2>
                 <a href="https://wa.me/qr/ADURKSXZOOEVH1" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                <p href="https://wa.me/qr/ADURKSXZOOEVH1" class="btn" target="_blank">Click Here</p>
+                <a href="https://wa.me/qr/ADURKSXZOOEVH1" class="btn" target="_blank">Click Here</a>
             </div>
 
         </div>
