--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     <div id="footer">
         <div class="container" style="background-color: #262626; text-align: center; padding: 30px 0;">
-            <p>Portfolio created by <a style="font-weight: bold;color: white; " href="https://wa.me/qr/YEXYBKRHDZNWE1" target="_blank" >Muhammad Farhan</a></p>
+            <p>Portfolio created by <a style="font-weight: bold;color: white; " href="https://wa.me/qr/V434XRPQGLQNG1" target="_blank" >Muhammad Farhan</a></p>
         </div>
     </div>
 
